# opencode-cloud

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  docker-compose.railway-template-base.yml  docker-compose.railway.yml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  updates-output.txt  updates.md
.cursor/rules/: cfn-lint-cloudformation.mdc  post-push-mirror.mdc  pre-commit.mdc
.githooks/: post-merge  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-bun/: action.yml
.github/workflows/: build-cli-binaries.yml  cargo-updates.yml  cargo-upgrades.yml  ci-pre-publish.yml  ci.yml  docker-publish.yml  dockerfile-updates.yml  publish-cloudformation.yml  publish-crates.yml  publish-npm.yml  publish.yml  update-opencode-commit.yml  version-bump.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: remote-docker-build-parse-error.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: persistence.md  rust-modularization-plan.md  update-flow.md
docs/deploy/: aws.md  digitalocean-droplet.md  digitalocean-marketplace.md  docker-desktop.md  railway.md
docs/security/: passkey-registration.md
schemas/: config.example.jsonc  config.schema.json
scripts/: check-crate-version-published.sh  check-dev-prereqs.sh  check-dockerfile-updates.sh  check-fork-typecheck-wiring.sh  check-opencode-submodule-published.sh  extract-oci-description.py  precommit-filtered.sh  quick-deploy.sh  release.sh  set-all-versions.sh  should-run-docker-check.sh  sync-readme-badges.ts  update-opencode-commit.sh  verify-cli-node-pack-perms.sh
scripts/provisioning/: opencode-cloud-setup-cloud-init.sh  opencode-cloud-setup-cloudformation.sh  opencode-cloud-setup-digitalocean.sh  opencode-cloud-setup.sh
(+128 files in other folders)
