[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/cli-rust",
]
exclude = [
    "packages/opencode/packages/opencode-broker",
    "packages/opencode/packages/desktop/src-tauri",
]

[workspace.package]
version = "21.0.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/pRizz/opencode-cloud"
homepage = "https://github.com/pRizz/opencode-cloud"
documentation = "https://docs.rs/opencode-cloud"
keywords = ["opencode", "ai", "cloud", "docker", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
opencode-cloud-core = { version = "21.0.0", path = "packages/core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal", "io-std", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.29", features = ["serde"] }
directories = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.16"
napi = { version = "3", features = ["tokio_rt", "napi9"] }
napi-derive = "3"
tempfile = "3"

# Docker integration
bollard = { version = "0.20.1", features = ["chrono", "buildkit"] }
futures-util = "0.3"
tar = "0.4"
flate2 = "1.1"
tokio-retry = "0.3"
indicatif = { version = "0.18", features = ["tokio", "futures"] }
http-body-util = "0.1"
bytes = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "json"] }

# CLI utilities
webbrowser = "1.0"
humantime = "2.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Platform service management
plist = "1.8"
dialoguer = "0.12"

# CLI output formatting
comfy-table = "7"

# Random generation
rand = "0.9"
sysinfo = "0.38"
